# Custom-C-Malloc-Implementaion

./: .gitignore  CMakeLists.txt  README.md
src/: lock.c  lock.h  main.c
test/: test-0.c  test-1.c  test-2.c  test-3.c  test-4.c
